--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@reduxjs/toolkit": "^1.9.6",
     "@types/node": "20.6.4",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
@@ -21,11 +22,12 @@
     "eslint-config-next": "13.5.2",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.282.0",
-    "next": "13.5.2",
+    "next": "^13.5.4",
     "postcss": "8.4.30",
     "puppeteer": "^21.3.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.1.3",
     "react-type-animation": "^3.1.0",
     "recharts": "^2.8.0",
     "tailwind-merge": "^1.14.0",
