--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "puppeteer": "^21.3.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
     "react-type-animation": "^3.1.0",
     "recharts": "^2.8.0",
