--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.16",
+    "cheerio": "^1.0.0-rc.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "eslint": "8.50.0",
@@ -24,7 +25,6 @@
     "lucide-react": "^0.282.0",
     "next": "^13.5.4",
     "postcss": "8.4.30",
-    "puppeteer": "^21.3.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
